# P2PFileTransfer

./: LICENSE  README.md  client.py  client.spec  pyproject.toml  server.py  server.spec
